atualizacao pequenas mudanças
