# BookStoreDigital/src/main/java/com/api/apiBookStore/model/StamentBook.java
@@ -21,7 +21,12 @@ public class StamentBook {
                     stmt.setString(8, book.getIdioma());
                     stmt.setDouble(9, book.getPreco());
                     stmt.setString(10, book.getImageUrl());
-                    stmt.setInt(11, book.getQuant());
+                    if (book.getQuant() != null) {
+                        stmt.setObject(11, book.getQuant(), java.sql.Types.INTEGER);
+                    } else {
+                        stmt.setNull(11, java.sql.Types.INTEGER);
+                    }
+                    System.out.println("Quantidade recebida: " + book.getQuant());
                     stmt.executeUpdate();
                 }
         }
